<resources>
    <string name="app_name">Parkineo</string>
    <string name="Logo_Empresa">Logo empresa</string>
    <string name="Registro">Registro de usuario</string>
    <string name="Usuario">Usuario</string>
    <string name="Email">Email</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Fecha_nacimiento">Fecha de nacimiento</string>
    <string name="Sexo">Sexo</string>
    <string name="Hombre">Hombre</string>
    <string name="Mujer">Mujer</string>
    <string name="Otro">Otro</string>
    <string name="Iniciar_Sesion">INICIAR SESIÓN</string>
    <string name="Registrarse">REGISTRARSE</string>
    <string name="Logo_Google">Logo Google</string>
    <string name="Logo_Facebook">Logo Facebook</string>
    <string name="Logo_Twitter">Logo Twitter</string>
    <string name="title_activity_menu_lateral">MenuLateralActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Titulo">David</string>
    <string name="Subtitulo">davidcalahorra2002@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Ajustes">Ajustes</string>
    <string name="Cerrar_sesion">Cerrar sesión</string>
    <string name="Reservar_plaza">Reservar plaza</string>
    <string name="Titular">Titular</string>
    <string name="Matrícula">Matrícula</string>
    <string name="Vehículo">Vehículo</string>
    <string name="Dias">Días</string>
    <string name="Fecha_reserva">Fecha reserva</string>
    <string name="Si">Sí</string>
    <string name="No">No</string>
    <string name="Seguro_tiempo">Seguro tiempo</string>
    <string name="Reservar">Reservar</string>

    <string name="API_KEY">AIzaSyBoDNL5D3-vkOMQsO7IXgtGwvP_pbUote4</string>
    <string name="localhost">http://192.168.96.175/Parkineo/</string>
    <string name="Reservas">Reservas</string>
    <string name="Mapa">Mapa</string>
    <string name="Informacion_reservas">Información reservas</string>
    <string name="Compartir">Compartir</string>
    <string name="Puntuaciones">Valóranos</string>
    <string name="Sobre_nosotros">Sobre nosotros</string>
    <string name="title_activity_parkings">ParkingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="Buscador">Buscador</string>
    <string name="Abrir_mapa">ABRIR MAPA</string>
</resources>