<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Principal">
            <menu>
                <item
                    android:id="@+id/nav_reservas"
                    android:icon="@android:drawable/ic_input_get"
                    android:title="@string/Reservas" />
                <item
                    android:id="@+id/nav_mapa"
                    android:icon="@android:drawable/ic_dialog_map"
                    android:title="@string/Mapa" />
                <item
                    android:id="@+id/nav_informacion_reservas"
                    android:icon="@android:drawable/ic_dialog_info"
                    android:title="@string/Informacion_reservas" />
            </menu>
        </item>
    </group>

    <item android:title="Comunicación">
        <menu>
            <item
                android:id="@+id/nav_compartir"
                android:icon="?attr/actionModeShareDrawable"
                android:title="@string/Compartir" />
            <item
                android:id="@+id/nav_valorar"
                android:icon="@android:drawable/btn_star"
                android:title="@string/Puntuaciones" />
            <item
                android:id="@+id/nav_sobre_nosotros"
                android:icon="@drawable/ic_baseline_android_24"
                android:title="@string/Sobre_nosotros" />
        </menu>
    </item>

</menu>