<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_reservas">

    <fragment
        android:id="@+id/nav_reservas"
        android:name="com.example.parkineo.activity.ui.reservas.ReservasFragment"
        android:label="@string/Reservas"
        tools:layout="@layout/fragment_reservas" />

    <fragment
        android:id="@+id/nav_mapa"
        android:name="com.example.parkineo.activity.ui.mapa.MapaFragment"
        android:label="@string/Mapa"
        tools:layout="@layout/fragment_mapa" />

    <fragment
        android:id="@+id/nav_informacion_reservas"
        android:name="com.example.parkineo.activity.ui.info_reservas.InfoReservasFragment"
        android:label="@string/Informacion_reservas"
        tools:layout="@layout/fragment_informacion_reservas" />

</navigation>